# MUDDLE

./: Cargo.toml  PRODUCT_PLAN.md  README.md
.claude/skills/muddle-pulse/: SKILL.md
.claude/skills/muddle-research/: SKILL.md
.claude/skills/muddle-wave/: SKILL.md
.github/workflows/: rust.yml
.roles/: README.md  core-engineer.md  host-adapter-engineer.md  playtest-designer.md  product-steward.md  validation-gatekeeper.md
context/waves/: PHASES.md
context/waves/2026-05-17-muddle-mud-engine/: WAVE.md
context/waves/2026-05-17-muddle-mud-engine/pulses/: pulse-01.md  pulse-02.md  pulse-03.md  pulse-04.md  pulse-05.md  pulse-06.md
crates/muddle-amaze-spike/: Cargo.toml
crates/muddle-amaze-spike/src/: lib.rs
crates/muddle-banish-spike/: Cargo.toml
crates/muddle-banish-spike/src/: lib.rs
crates/muddle-cli/: Cargo.toml
crates/muddle-cli/src/: lib.rs  main.rs
crates/muddle-core/: Cargo.toml
crates/muddle-core/src/: lib.rs
crates/muddle-macroquad/: Cargo.toml
crates/muddle-macroquad/src/: lib.rs  main.rs
crates/muddle-mock-sim/: Cargo.toml
crates/muddle-mock-sim/src/: lib.rs
crates/muddle-window/: Cargo.toml
crates/muddle-window/src/: lib.rs  main.rs
docs/: engine-clients.md  window-client.md
